// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message List renders message when no conversation id 1`] = `
<p
  className="MuiTypography-root makeStyles-noConversationText-3 MuiTypography-h6"
>
  Please select a conversation from the list on the left or start a new one!
</p>
`;

exports[`Message List renders message when no messages 1`] = `
<p
  className="MuiTypography-root makeStyles-noConversationText-3 MuiTypography-h6"
>
  Send a message!
</p>
`;

exports[`Message List renders messages 1`] = `
<div
  className="makeStyles-content-1"
>
  <div
    className="makeStyles-innerContent-2"
  >
    <div
      className="makeStyles-outerContent-47 makeStyles-outerFromCurrentUser-49"
    >
      <span
        className="MuiTypography-root makeStyles-time-53 makeStyles-timeFromCurrentUser-54 MuiTypography-caption"
      >
        5/3/2019, 3:45:12 AM
      </span>
      <div
        className="MuiPaper-root makeStyles-content-48 makeStyles-fromCurrentUser-51 MuiPaper-elevation3 MuiPaper-rounded"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          hello
        </p>
      </div>
    </div>
    <div
      className="makeStyles-outerContent-47 makeStyles-outerFromOtherUser-50"
    >
      <span
        className="MuiTypography-root makeStyles-time-53 makeStyles-timeFromOtherUser-55 MuiTypography-caption"
      >
        2/3/2019, 3:45:12 AM
      </span>
      <div
        className="MuiPaper-root makeStyles-content-48 makeStyles-fromOtherUser-52 MuiPaper-elevation3 MuiPaper-rounded"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          hello
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message List renders null when no auth 1`] = `null`;

exports[`Message List renders spinner when lookup up messages 1`] = `
<div
  className="MuiCircularProgress-root makeStyles-spinner-4 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20.2}
      strokeWidth={3.6}
      style={Object {}}
    />
  </svg>
</div>
`;
